Fixed overflow.

--- a/src/SuperSchedule.UI/desktop/src/components/Sidebar/Sidebar.module.scss
+++ b/src/SuperSchedule.UI/desktop/src/components/Sidebar/Sidebar.module.scss
@@ -5,6 +5,11 @@
   float: left;
   position: fixed;
   z-index: 5;
+  overflow-y: auto;
+}
+
+.Sidebar::-webkit-scrollbar {
+  display: none;
 }
 
 .SidebarList {
