--- a/src/SuperSchedule.UI/desktop/src/features/Employee/components/LeavesAndSickLeave/LeavesAndSickLeave.module.scss
+++ b/src/SuperSchedule.UI/desktop/src/features/Employee/components/LeavesAndSickLeave/LeavesAndSickLeave.module.scss
@@ -5,6 +5,7 @@
 .Container {
   width: 100vw;
   margin-left: 250px;
+  overflow-x: hidden;
 }
 
 .NoEmployees {
