--- a/src/SuperSchedule.UI/desktop/src/features/Report/components/Report.module.scss
+++ b/src/SuperSchedule.UI/desktop/src/features/Report/components/Report.module.scss
@@ -1,8 +1,10 @@
 .Report {
-  margin-left: 270px;
-  margin-right: 20px;
+  margin-left: 260px;
+  padding-right: 10px;
+  padding-bottom: 10px;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 .DatesContainer {
