--- a/src/SuperSchedule.UI/desktop/src/features/Setting/components/Setting.module.scss
+++ b/src/SuperSchedule.UI/desktop/src/features/Setting/components/Setting.module.scss
@@ -5,7 +5,8 @@
   flex-grow: 1;
   align-items: center;
   flex-direction: column;
-  margin-right: 20px;
+  padding-right: 20px;
+  overflow-x: hidden;
 }
 
 .Row {
